--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: yhm's blog
-description: Welcome to yhm's blog
+description: Welcome to yhm's blog!
 github_username: yhddd123
 
 # Email and twitter are optional:
